test/libsolidity/syntaxTests/nameAndTypeResolution/077_fallback_function_with_return_parameters.sol
contract C {
    fallback() external returns (uint) { }
}
// ----
// TypeError: (45-51): Fallback function can only have a single "bytes memory" return value.
